fix: z-index class names

--- a/src/components/wml-widgets-common/less/css/z-index.less
+++ b/src/components/wml-widgets-common/less/css/z-index.less
@@ -1,15 +1,15 @@
 
 .z-index(@n)     { z-index: @n * 100;    }
 
-.-0-z            { .z-index(0);          }
-.-1-z            { .z-index(1);          }
-.-2-z            { .z-index(2);          }
-.-3-z            { .z-index(3);          }
-.-4-z            { .z-index(4);          }
-.-5-z            { .z-index(5);          }
+.-x0-z            { .z-index(0);          }
+.-x1-z            { .z-index(1);          }
+.-x2-z            { .z-index(2);          }
+.-x3-z            { .z-index(3);          }
+.-x4-z            { .z-index(4);          }
+.-x5-z            { .z-index(5);          }
 
-.-999-z          { .z-index(9.99);       }
-.-9999-z         { .z-index(99.99);      }
+.-x999-z          { .z-index(9.99);       }
+.-x9999-z         { .z-index(99.99);      }
 
 .-max-z          { .z-index(21474836.47);}
 
